2010-12-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4           [Patch #3116490] cross-compile Tcl mingw32 on unix
	* win/configure        This makes it possible to cross-compile Tcl/Tk for
	Windows (either 32-bit or 64-bit) out-of-the-box on UNIX, using mingw-w64
	build tools.

2010-12-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkInt.decls (TkDrawAngledTextLayout,TkDrawAngledChars,...):
	Expose angled text API for Emiliano Gavilan. Still only in internal
	stub table.

2010-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkAtom.c:    Fix various 64-bit gcc(-4.5.2) warnings: cast
	* generic/tkSelect.c:  from pointer to integer of different size.
	* win/stubs.c:
	* win/tkWinButton.c:
	* win/tkWinColor.c:
	* win/tkWinPixmap.c:
	* win/tkWinScrlbr.c:
	* win/tkWinWindow.c:
	* win/tkWinWm.c:
	* win/ttkWinMonitor.c:
	* win/tkWin32Dll.c:   Make assembler code compile in Win64 with gcc.

2010-11-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c:  [Bug 3071836]: Crash/Tcl_Panic on WinXP saving
	* win/tkWinInit.c:    file to C:\, and rewrite TkpDisplayWarning not
	to use any Tcl functions any more. This allows TkpDisplayWarning to be
	used as panic proc.
	* win/winMain.c:      Use TkpDisplayWarning as panic proc on Windows.
	* generic/tkMain.c:   Remove unused strrchr, combine outChannel and
	errChannel variables to a single variable.

2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanv*.c:         Revise Tcl_Panic() calls ending with a
	* generic/tkGeomerty.c:      newline removing the newline, because
	* generic/tkImgPhInstance.c: Tcl_Panic() outputs a final newline
	* generic/tkMenu.c:	     already.
	* generic/tkRectOval.c:
	* generic/tkTextBTree.c:
	* generic/tkWindow.c:
	* unix/tkUnixRFont.c:
	* win/tkWinColor.c:
	* win/tkWinDraw.c:
	* win/tkWinMenu.c:

2010-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/winMain.c:   [FRQ 491789]: "setargv() doesn't support a unicode